--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #793d54; }
+  background: #62a10f; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #3e1d8b; }
+  background: #87ca65; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ee65bb; }
+  background: #8db721; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #f960dd; }
+  background: #e35532; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #44b717; }
+  background: #5155ce; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #0e7199; }
+  background: #4f7d4b; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #30c3ea; }
+  background: #8ccc90; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #22b3ab; }
+  background: #a98e46; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #94693d; }
+  background: #b33474; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #3c6a64; }
+  background: #20b144; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #d24c27; }
+  background: #57e7b6; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #603c38; }
+  background: #2072b5; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #63b2cc; }
+  background: #6e0bf7; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #539350; }
+  background: #499932; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #27bbaf; }
+  background: #dc442a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #614860; }
+  background: #01a036; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #947f1e; }
+  background: #d5efeb; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #2ccad9; }
+  background: #0cf49b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #30b8b0; }
+  background: #080b82; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #1c9bb3; }
+  background: #78fa08; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #5837d7; }
+  background: #9d5993; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #76e944; }
+  background: #1d081f; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #81375d; }
+  background: #5e049e; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #638e4f; }
+  background: #b2fc15; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #37e0d0; }
+  background: #678680; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #f367e2; }
+  background: #ebcd92; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #5c9dfa; }
+  background: #056ee8; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #d2047a; }
+  background: #116652; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #da93d5; }
+  background: #f028c6; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #656970; }
+  background: #0c4445; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d52033; }
+  background: #fc6c2c; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #ff0caf; }
+  background: #91ac6d; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #c3a8d9; }
+  background: #e8c67c; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #a2bfbb; }
+  background: #260598; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #9b13ad; }
+  background: #e96e34; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #068309; }
+  background: #dba281; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #bea6ae; }
+  background: #a212b7; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #fbbd4a; }
+  background: #176b04; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #5c8634; }
+  background: #0a4860; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #fc1ad4; }
+  background: #e37d96; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #a6303f; }
+  background: #b93e45; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #311466; }
+  background: #b2dd72; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #98d3b7; }
+  background: #7b140d; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #15d62e; }
+  background: #bd0b93; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #20b2fe; }
+  background: #ea1172; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #973de5; }
+  background: #2b3cfd; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #7d15cb; }
+  background: #2da543; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #16f0f8; }
+  background: #1381f9; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #cc3b78; }
+  background: #b875ad; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #8fd93c; }
+  background: #d8a536; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #703b63; }
+  background: #fabc44; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #b0e8a9; }
+  background: #03a960; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #2b5b47; }
+  background: #8430d3; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #f0eaec; }
+  background: #c9973b; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #43d47c; }
+  background: #405d2f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #041d1f; }
+  background: #b99376; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #2dd653; }
+  background: #a3a755; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #9e476c; }
+  background: #7ee830; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #ae8e19; }
+  background: #801dd4; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #d5c562; }
+  background: #34a458; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #c8c4e7; }
+  background: #ddc61f; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #ce6c8f; }
+  background: #cabc65; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #58f2ea; }
+  background: #c560a4; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #90ce4a; }
+  background: #fa113f; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #7e96c4; }
+  background: #56a239; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #762def; }
+  background: #5a3d66; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #c526e0; }
+  background: #4e58e9; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #776bf3; }
+  background: #b182d3; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #66e7a4; }
+  background: #f0a19c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #61702e; }
+  background: #53a8b1; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #9f6355; }
+  background: #2a5ddd; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #2eb4ba; }
+  background: #880aa6; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #a87e4f; }
+  background: #5b2382; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #6fe25b; }
+  background: #4ceb46; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #129b0f; }
+  background: #ce6050; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #65b206; }
+  background: #495281; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #20319f; }
+  background: #f9b18a; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #5375dc; }
+  background: #5b5363; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #7a4640; }
+  background: #dd23e2; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #e79856; }
+  background: #02d6c1; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #61db18; }
+  background: #267d8e; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #4fc963; }
+  background: #901445; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #873502; }
+  background: #b1044e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #74ae4d; }
+  background: #52ffed; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #f0356b; }
+  background: #9f673e; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #663de0; }
+  background: #dc0468; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #4a7550; }
+  background: #5c2ce0; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #d78212; }
+  background: #f69d38; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #0a1dac; }
+  background: #1198fa; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #97a0e9; }
+  background: #b3f5c4; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #1923ca; }
+  background: #d42b76; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #b4a5f5; }
+  background: #3df035; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #e43512; }
+  background: #df7062; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #772597; }
+  background: #27dda9; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #49a47e; }
+  background: #75c6dc; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #780e0c; }
+  background: #4ebfc2; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #c502b9; }
+  background: #f0fd12; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #37eaf4; }
+  background: #fd8457; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4e1475; }
+  background: #28a776; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ebabe0; }
+  background: #8fbd50; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10558,6 +10558,278 @@ input[type="checkbox"] {
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .ps {
     overflow: auto !important; } }
+.block {
+  display: block; }
+
+.intro {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  padding: 20px 60px 80px; }
+
+.intro-inner-div {
+  background: #fff;
+  position: relative;
+  border-radius: 20px;
+  width: 100%;
+  height: 98vh;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19); }
+
+.slider {
+  float: left;
+  position: relative;
+  width: 50%;
+  height: 100%; }
+
+.slider li {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 100% 50%;
+  -webkit-transition: clip .7s ease-in-out, z-index 0s .7s;
+  transition: clip .7s ease-in-out, z-index 0s .7s;
+  clip: rect(0, 100vw, 100vh, 0);
+  display: table;
+  border-radius: 20px 0px 0px 20px; }
+
+.center-y {
+  text-align: left;
+  color: #000;
+  font-size: 1.6rem;
+  padding: 11% 0 0 4%; }
+
+.center-y h3 {
+  font-size: 3.8rem;
+  color: #1c9cd7;
+  margin: 1rem 0rem; }
+
+.center-y h3 + a {
+  font-size: 1.6rem;
+  display: inline-block;
+  color: #000;
+  margin-top: 2rem; }
+
+.center-y h4 {
+  font-size: 2.3rem;
+  display: list-item;
+  color: #e22026;
+  margin: 1.2rem 0rem; }
+
+.center-y .Btn {
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: #fff;
+  width: 30%;
+  display: inline-table;
+  text-align: center;
+  line-height: 0.9em;
+  padding: 18px !important;
+  margin: auto 10rem;
+  background: #8651ff;
+  border: none;
+  border-radius: 5px; }
+
+h3,
+h3 + a {
+  opacity: 0;
+  -webkit-transition: opacity .7s 0s, -webkit-transform .5s .2s;
+  transition: opacity .7s 0s, -webkit-transform .5s .2s;
+  transition: opacity .7s 0s, transform .5s .2s;
+  transition: opacity .7s 0s, transform .5s .2s, -webkit-transform .5s .2s;
+  -webkit-transform: translate3d(0, 50%, 0);
+  transform: translate3d(0, 50%, 0); }
+
+li.current h3,
+li.current h3 + a {
+  opacity: 1;
+  -webkit-transition-delay: 1s;
+  transition-delay: 1s;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+
+li.current {
+  z-index: 1;
+  clip: rect(0, 100vw, 100vh, 0); }
+
+li.prev {
+  clip: rect(0, 0, 100vh, 0); }
+
+.aad {
+  background: #fff;
+  display: flex;
+  flex-direction: row;
+  border-radius: 20px;
+  margin: 70px 100px; }
+
+.slider nav {
+  position: absolute;
+  bottom: 5%;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 10; }
+
+.right-section-div {
+  float: right;
+  width: 50%; }
+
+.LoginPanel {
+  padding: 30px 100px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column; }
+
+.LoginPanel .logoSection {
+  width: auto;
+  padding-right: 30px;
+  border-right: 1px solid #6d6e71;
+  display: inline-block;
+  vertical-align: top; }
+
+.LoginPanel .fieldsSection {
+    /*min-width: 320px;
+	padding-left: 26px;*/
+  display: inline-block;
+  vertical-align: top; }
+
+.LoginPanel h1 {
+  font-size: 35px;
+  margin: 40px 0px 8px 0px; }
+
+.LoginPanel h3 {
+  color: #9a9a9a;
+  font-size: 18px;
+  margin: 5px 0px 40px 0px;
+  opacity: 1; }
+
+.LoginPanel label {
+  color: #4c4c4c; }
+
+input[type="text"],
+input[type="password"],
+textarea {
+  border: 1px solid #cdcdd6;
+  padding: 16px;
+  font-size: 15px;
+  border-radius: 5px;
+  line-height: 1em;
+  width: 100%;
+  color: #cbc9c9; }
+
+select {
+  border: 1px solid #cdcdd6;
+  padding: 5.5px;
+  color: #cbc9c9;
+  font-size: 15px;
+  line-height: 1em;
+  width: 100%;
+  -moz-appearance: none;
+  background: #fff url(../images/drop-arrow-green.png) no-repeat scroll 97% 13px;
+  box-sizing: border-box;
+  cursor: pointer; }
+
+.LoginPanel .fieldsSection .userName {
+  background: #fff url(../images/icon-user.png) no-repeat 12px center;
+  margin-bottom: 40px; }
+
+.LoginPanel .fieldsSection .password {
+  margin-bottom: 10px;
+  background: #fff url(../images/eye.png) no-repeat center right; }
+
+.LoginPanel .fieldsSection .userName,
+.LoginPanel .fieldsSection .password {
+  width: 100%;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -moz-box-sizing: border-box; }
+
+.LoginPanel .fieldsBotSection input[type="checkbox"] {
+    /*border: 1px solid #b9babd;
+	background: #fff;
+	width: 12px;*/
+  display: none; }
+
+.LoginPanel .fieldsBotSection label {
+  color: #4c4c4c;
+  padding: 25px 0px;
+  font-size: 15px;
+  transition: all 0.3s ease-in-out 0s;
+  line-height: 1.1em;
+  background: url(../images/uncheckbox-img.png) no-repeat 0px center;
+  cursor: pointer;
+  padding-left: 35px;
+  font-family: Arial, Helvetica, sans-serif; }
+
+.LoginPanel .fieldsBotSection input[type="checkbox"]:checked + label {
+  background-image: url(../images/checkbox-img.png); }
+
+/*.LoginPanel .Btn{
+	margin-top: 11px;
+	padding: 8px 30px;
+}
+*/
+.or-login-div {
+  padding: 6px 0px; }
+  .or-login-div span {
+    padding: 8px; }
+
+.LoginPanel .fieldsBotSection .forgotLink {
+  color: #8e8e8e;
+  font-size: 15px;
+  transition: all 0.3s ease-in-out 0s;
+  line-height: 1em;
+  font-family: Arial, Helvetica, sans-serif; }
+
+.LogoIcon {
+  background: transparent url("images/logo-icon.png") no-repeat center center;
+  background-size: 100% auto;
+  display: block;
+  width: 166px;
+  height: 186px; }
+
+.LogoIcon span {
+  display: none; }
+
+.fr {
+  float: right; }
+
+.fl {
+  float: left; }
+
+.text-c {
+  text-align: center; }
+
+.Btn,
+input[type="submit"] {
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: #fff;
+  width: 100%;
+  line-height: 0.9em;
+  padding: 18px !important;
+  background: #8651ff;
+  border: none;
+  border-radius: 5px; }
+
+.try-free-btn {
+  font-size: 17px;
+  margin-bottom: 10px;
+  color: #fff;
+  width: 100%;
+  line-height: 0.9em;
+  padding: 16px !important;
+  background: #a3a2a2;
+  border: none;
+  border-radius: 5px;
+  transition: all 0.3s ease-in-out 0s; }
+
 .expression-heading {
   font-size: 18px !important;
   margin-top: 30px; }
@@ -10606,7 +10878,7 @@ input[type="checkbox"] {
 .table-borderless thead {
   background: none;
   color: #8c8c8c;
-  font-family: 'proxima-semi-bold';
+  font-family: "proxima-semi-bold";
   border-bottom: 1px solid #dcdde1; }
 
 .table-borderless thead th {
@@ -10669,9 +10941,11 @@ input[type="checkbox"] {
 
 .tree-list-div {
   border: 1px solid #c2c3c7;
-  margin: 0px 20px;
+  margin: 0px 20px 25px;
   width: 700px;
-  overflow: auto; }
+  overflow: auto;
+  max-height: 500px;
+  padding: 20px; }
 
 .tree-list-div .device-tab-right-heading,
 .tree-list-div .device-tab-norman-txt {
@@ -10679,8 +10953,8 @@ input[type="checkbox"] {
 
 .tree-list-div .device-tab-detail-box {
   padding: 0px !important;
-  width: 700px;
-  overflow: auto; }
+  width: 100%;
+  max-height: 300px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
@@ -10736,7 +11010,40 @@ input[type="checkbox"] {
   .tree-list-div .device-tab-detail-box {
     padding: 0px !important;
     overflow-x: scroll;
-    width: 700px; } }
+    width: 700px; }
+
+  .intro {
+    padding: 20px; }
+
+  .right-section-div {
+    width: 100%;
+    padding: 20px;
+    float: inherit; }
+
+  .left {
+    width: 100%;
+    height: 30%; }
+
+  .slider {
+    display: none;
+        /*width: 100%;
+		height: 70%;*/ }
+
+  .LoginPanel {
+    padding: 0px; }
+
+  .LoginPanel .fieldsBotSection label {
+    font-size: 13px;
+    transition: all 0.3s ease-in-out 0s; }
+
+  .LoginPanel .fieldsBotSection .forgotLink {
+    font-size: 13px;
+    transition: all 0.3s ease-in-out 0s; }
+
+  .try-free-btn {
+    padding: 12px !important;
+    font-size: 13px;
+    transition: all 0.3s ease-in-out 0s; } }
 /*767 screen end here*/
 @media screen and (max-width: 767px) {
   .textarea-comment {
