--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -70,6 +70,48 @@
         overflow-x: scroll;
         width: 700px;
     }
+
+    // login page css
+    .intro {
+        padding: 20px;
+    }
+
+    .right-section-div {
+        width: 100%;
+        padding: 20px;
+        float: inherit;
+    }
+
+    .left {
+        width: 100%;
+        height: 30%;
+    }
+
+    .slider {
+        display: none;
+        /*width: 100%;
+		height: 70%;*/
+    }
+
+    .LoginPanel {
+        padding: 0px;
+    }
+
+    .LoginPanel .fieldsBotSection label {
+        font-size: 13px;
+        transition: all 0.3s ease-in-out 0s;
+    }
+
+    .LoginPanel .fieldsBotSection .forgotLink {
+        font-size: 13px;
+        transition: all 0.3s ease-in-out 0s;
+    }
+
+    .try-free-btn {
+        padding: 12px !important;
+        font-size: 13px;
+        transition: all 0.3s ease-in-out 0s;
+    }
 }
 
 /*767 screen end here*/
