--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -11,6 +11,8 @@
 }
 
 .intro-inner-div {
+    display: flex;
+    align-items: center;
     background: #fff;
     position: relative;
     border-radius: 20px;
