--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #62a10f; }
+  background: #63e67c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #87ca65; }
+  background: #550a14; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #8db721; }
+  background: #d1cc10; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #e35532; }
+  background: #ee63d1; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #5155ce; }
+  background: #74864b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #4f7d4b; }
+  background: #cc0ffc; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #8ccc90; }
+  background: #dc5dcb; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a98e46; }
+  background: #c1cf74; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b33474; }
+  background: #5af795; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #20b144; }
+  background: #ce4ae5; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #57e7b6; }
+  background: #159582; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #2072b5; }
+  background: #ab185e; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #6e0bf7; }
+  background: #e83043; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #499932; }
+  background: #b643e6; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #dc442a; }
+  background: #d23583; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #01a036; }
+  background: #e344b2; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #d5efeb; }
+  background: #5a3eeb; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #0cf49b; }
+  background: #8248d7; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #080b82; }
+  background: #f7cb27; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #78fa08; }
+  background: #737f80; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #9d5993; }
+  background: #41c824; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #1d081f; }
+  background: #ab1ada; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #5e049e; }
+  background: #acb822; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #b2fc15; }
+  background: #0f557f; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #678680; }
+  background: #200e43; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #ebcd92; }
+  background: #7be78d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #056ee8; }
+  background: #643971; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #116652; }
+  background: #879941; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #f028c6; }
+  background: #3afaa0; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #0c4445; }
+  background: #29ec69; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #fc6c2c; }
+  background: #3d4241; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #91ac6d; }
+  background: #444e61; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #e8c67c; }
+  background: #9880b2; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #260598; }
+  background: #028e68; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #e96e34; }
+  background: #efc045; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #dba281; }
+  background: #d9ad60; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #a212b7; }
+  background: #a646cf; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #176b04; }
+  background: #2e3474; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #0a4860; }
+  background: #3ad7e8; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e37d96; }
+  background: #447201; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #b93e45; }
+  background: #8d0edc; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #b2dd72; }
+  background: #6ef12f; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #7b140d; }
+  background: #958d3b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #bd0b93; }
+  background: #6088fd; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #ea1172; }
+  background: #81882e; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #2b3cfd; }
+  background: #a5e3b2; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #2da543; }
+  background: #f81b84; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #1381f9; }
+  background: #e9b869; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #b875ad; }
+  background: #0351d1; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #d8a536; }
+  background: #ea70c6; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #fabc44; }
+  background: #dda25f; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #03a960; }
+  background: #4a2d91; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #8430d3; }
+  background: #dbcf33; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #c9973b; }
+  background: #870e09; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #405d2f; }
+  background: #518b67; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #b99376; }
+  background: #fbb631; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a3a755; }
+  background: #391dd2; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #7ee830; }
+  background: #80ecaa; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #801dd4; }
+  background: #14cdbc; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #34a458; }
+  background: #56fd85; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ddc61f; }
+  background: #b0a06c; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #cabc65; }
+  background: #a2eeee; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #c560a4; }
+  background: #4e7eff; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #fa113f; }
+  background: #cffd5e; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #56a239; }
+  background: #f3b8f7; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #5a3d66; }
+  background: #4e6724; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #4e58e9; }
+  background: #740523; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b182d3; }
+  background: #2315f8; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #f0a19c; }
+  background: #203f8e; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #53a8b1; }
+  background: #d992bd; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #2a5ddd; }
+  background: #f0a702; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #880aa6; }
+  background: #22b16e; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #5b2382; }
+  background: #c94689; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #4ceb46; }
+  background: #a9663e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #ce6050; }
+  background: #013194; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #495281; }
+  background: #6bff28; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #f9b18a; }
+  background: #3fcf86; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #5b5363; }
+  background: #db64a6; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #dd23e2; }
+  background: #448a23; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #02d6c1; }
+  background: #03ba0e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #267d8e; }
+  background: #bec54f; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #901445; }
+  background: #bd8250; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #b1044e; }
+  background: #6f8e76; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #52ffed; }
+  background: #b9b040; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #9f673e; }
+  background: #d0aaa5; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #dc0468; }
+  background: #d5fcf6; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #5c2ce0; }
+  background: #5409c7; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #f69d38; }
+  background: #7dc52a; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #1198fa; }
+  background: #a6fbcb; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #b3f5c4; }
+  background: #45b1c6; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #d42b76; }
+  background: #e9a6eb; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #3df035; }
+  background: #c68fa8; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #df7062; }
+  background: #8b04fd; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #27dda9; }
+  background: #051612; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #75c6dc; }
+  background: #144de9; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #4ebfc2; }
+  background: #662cae; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #f0fd12; }
+  background: #267652; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #fd8457; }
+  background: #ed7640; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #28a776; }
+  background: #6abc48; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #8fbd50; }
+  background: #80f001; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10568,6 +10568,8 @@ input[type="checkbox"] {
   padding: 20px 60px 80px; }
 
 .intro-inner-div {
+  display: flex;
+  align-items: center;
   background: #fff;
   position: relative;
   border-radius: 20px;
